# ChangeLog for dev-python/pygtk
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.85 2005/07/26 21:45:48 kloeri Exp $

  26 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> pygtk-2.6.1.ebuild:
  Stable on alpha.

  21 Jul 2005; Markus Rothe <corsair@gentoo.org> pygtk-2.6.1.ebuild:
  Stable on ppc64

*pygtk-2.6.2 (19 Jul 2005)

  19 Jul 2005; Lukasz Strzygowski <lucass@gentoo.org> +pygtk-2.6.2.ebuild:
  Version bump.

  18 Jul 2005; Gustavo Zacarias <gustavoz@gentoo.org> pygtk-2.6.1.ebuild:
  Stable on sparc

  17 Jul 2005; Tobias Scherbaum <dertobi123@gentoo.org> pygtk-2.6.1.ebuild:
  ppc stable

  16 Jul 2005; John N. Laliberte <allanonjl@gentoo.org> pygtk-2.6.1.ebuild:
  marking 2.6.1 stable on x86

  11 Jul 2005; Stephen P. Becker <geoman@gentoo.org> pygtk-2.4.1.ebuild,
  pygtk-2.6.1.ebuild:
  added mips keywords to satisfy gnome repoman deps

  08 Apr 2005; Markus Rothe <corsair@gentoo.org> pygtk-2.4.1.ebuild,
  pygtk-2.6.0.ebuild, pygtk-2.6.1.ebuild:
  Stable on ppc64/added ~ppc64 to KEYWORDS

*pygtk-2.6.1 (16 Mar 2005)

  16 Mar 2005; Alastair Tse <liquidx@gentoo.org> +pygtk-2.6.1.ebuild:
  version bump

  15 Mar 2005; Alastair Tse <liquidx@gentoo.org> pygtk-2.4.1.ebuild,
  pygtk-2.6.0.ebuild:
  more multilib fixes

  08 Mar 2005; Alastair Tse <liquidx@gentoo.org> pygtk-2.6.0.ebuild:
  add python numeric dep

*pygtk-2.6.0 (08 Mar 2005)

  08 Mar 2005; Alastair Tse <liquidx@gentoo.org> -pygtk-2.4.0.ebuild,
  +pygtk-2.6.0.ebuild:
  version bump, now requires gtk+-2.6. fix get_libdir in pkg_postinst and
  pkg_postrm. (#76791)

  26 Feb 2005; Jeremy Huddleston <eradicator@gentoo.org> pygtk-2.4.1.ebuild:
  Multilib fixes.

  04 Feb 2005; Bryan Østergaard <kloeri@gentoo.org> pygtk-2.4.1.ebuild:
  Stable on alpha.

  26 Jan 2005; Lukasz Strzygowski <lucass@gentoo.org> -pygtk-2.3.92.ebuild,
  -pygtk-2.3.93.ebuild, -pygtk-2.3.94.ebuild, -pygtk-2.3.96.ebuild,
  -pygtk-2.3.97.ebuild: