@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pygtk
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.85 2005/07/26 21:45:48 kloeri Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/pygtk/ChangeLog,v 1.86 2005/08/01 12:06:37 blubb Exp $
+
+  01 Aug 2005; Simon Stelling <blubb@gentoo.org> pygtk-2.6.1.ebuild:
+  stable on amd64
 
   26 Jul 2005; Bryan Østergaard <kloeri@gentoo.org> pygtk-2.6.1.ebuild:
   Stable on alpha.
